Fix: StyledComponent naming fix, HomePage overflowY scroll fix

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -44,3 +44,7 @@ body {
 a:hover {
   text-decoration: none;
 }
+
+.hideOverflowY {
+  overflow-y: hidden;
+}
